Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-05-23 Kimmo
 PATCH: [ 1723778 ] Warn user when folder compare contents have changed at disk
  Src: DirActions.cpp DirView.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2007-05-20 Tim
 PATCH: [ 1722213 ] Fix wrong </endtag> syntax color in HTML highlighters
  Src/editlib: asp.cpp html.cpp php.cpp

2007-05-20 Takashi
 PATCH: [ 1717774 ] Gradient toolbar
  Src: MainFrm.cpp MainFrm.h

2007-05-19 Tim
 Fix white space indenting in ASP and C# highlighter (included with PATCH #1556685).
  Src/editlib: asp.cpp csharp.cpp

2007-05-17 Kimmo
 BUG: [ 1719892 ] New file filter cannot find template file
  Src: FileFiltersDlg.cpp

2007-05-15 Tim
 BUG: [ 1719427 ] SetResourceVersions.bat shows error message
  Src: SetResourceVersions.wsf

2007-05-15 WinMerge experimental release 2.7.3.4 (SVN revision 4287)

2007-05-14 Gal
 BUG: [ 1714088 ] displays not existing content
  Src: stringdiffs.cpp

2007-05-14 Kimmo
 PATCH: [ 1718060 ] Change locationpane visible area color
  Src: LocationView.cpp

2007-05-13 Takashi
 PATCH: [ 1718148 ] Fix tab bar problem
  Src/Common: MDITabBar.cpp

2007-05-13 Takashi
 Japanese translation - update
  Src/Languages/Japanese/MergeJapanese.rc

2007-05-13 Takashi
 BUG: [ 1717814 ] Fix header drawing issue on WinXP with Luna Theme
  Src/Common: SortHeaderCtrl.cpp

2007-05-12 Tim
 PATCH: [ 1716799 ] Remove TOOLBAR from lang files
  Src: Merge.rc Merge2.rc
  Src/Languages/*: Merge*.rc

2007-05-07 Tim
 RFE: [ 1711549 ] Simplify IDC_IGNOREREGEXP text
  Src: Merge.rc
  Src/Languages/*: Merge*.rc

2007-05-06 Tim
 RFE: [ 1711548 ] Move common things to own resource file
  Src: Merge.rc
  Src new file: Merge2.rc
  Src/res: Merge.rc2

2007-04-30 Kimmo
 PATCH: [ 1704904 ] Korean Translation 2.6.X
  Submitted by Sukjoon, Hwang
  Src/Languages/Korean: MergeKorean.rc

2007-04-28 Kimmo
 PATCH: [ 1703350 ] Update of Swedish MergeSwedish.rc