@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2007-05-26 Kimmo
+ PATCH: [ 1725778 ] Cleanup CDirView::OpenSelection()
+  Src: DirView.cpp DirView.h
+
 2007-05-23 Kimmo
  PATCH: [ 1723778 ] Warn user when folder compare contents have changed at disk
   Src: DirActions.cpp DirView.h Merge.rc resource.h
